--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Borel&family=REM:wght@200;300;500;600;800&display=swap');
+
+html{
+  scroll-behavior: smooth;
+  --font-rem:'REM', sans-serif;
+  --font-borel: 'Borel', cursive;
+  --default-color:#f8eee0;
+  --red-color:#db3828;
+  --gray-color:gray;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  background-color: var(--default-color);
+  
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/*
+button {
+  background-color: var(--red-color);
+  color:white;
+  font-family: var(--font-rem);  
+  font-size: 1em;
+  height: 40px;
+  width: 120px;
+  border: none;
+  border-radius: 30px;
+  border:1px solid var(--red-color) ;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+}
+button:hover {
+  background-color: transparent;
+  color:var(--red-color);
+  border:2px solid var(--red-color) ;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input[type=text] {
+  border: none;
+  padding-bottom: 10px;
+  background-color: transparent;
+  font-family: var(--font-rem); 
+  font-weight: 300;
+  font-size: 1.2em;
+  color: rgb(73, 73, 73);
+  transition: border-bottom 0.4s ease-in-out;
+  border-bottom: 2px solid var(--red-color);
+}
+input[type=date] {
+  outline: none;
+  border: none;
+  padding-bottom: 10px;
+  background-color: transparent;
+  font-family: var(--font-rem); 
+  font-weight: 300;
+  font-size: 1.2em;
+  color: rgb(73, 73, 73);
+  transition: border-bottom 0.4s ease-in-out;
+  border-bottom: 2px solid var(--red-color);
+}
+input[type=date]::placeholder {
+  color: transparent;
+}
+
+input[type=text]:focus {
+  outline: none;
+  border-bottom: 2px solid gray;
+}
+::-webkit-input-placeholder { 
+  color: red;
+  font-size: 1.5em;
+}
+
+:-ms-input-placeholder { 
+  color: red;
+  font-size: 1.5em;
+}
+
+::placeholder {
+  color: rgb(134, 134, 134);
+
+
+}
+*/
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+ 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--red-color); 
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
